Finally fixed education, footer not showing up; color consistency; anchor for returning to education section after visiting coursework page

--- a/css/style.css
+++ b/css/style.css
@@ -860,7 +860,7 @@ body.offcanvas .colorlib-nav-toggle {
 	.timeline-entry
 	.timeline-entry-inner
 	.timeline-icon.color-2 {
-	background: brown;
+	background: #542E22;
 	color: white;
 }
 .timeline-centered
